--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FJKdkljfkldj</title>
-</head>
-<body>
-    <h1 class="zagolovok">Привет</h1>
-    <a href="https://vk.com/">
-        VK
-    </a>
-    <hr>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Web Algorithms</title>
+  </header>
+  <body>
+    <div>
+      <iframe src="./algorithms/A Star/index.html" height="1000" width="1000"></iframe>
+    </div>
+  </body>
 </html>
