--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
-    <title>main</title>
+    <title>Ant Algorithm</title>
 </head>
 <body>
     
