--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -6,7 +6,7 @@
     <title>Ant Algorithm</title>
 </head>
 <body>
-    
-    <script src="./logic.js"></script>
+    <canvas class="canvas" width="1000" height="1000"></canvas>
+    <script src="./logic2.js"></script>
 </body>
 </html>
