--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <title>main</title>
     <link rel="stylesheet" href="./styles.css">
     <title>main</title>
 </head>
 
 <body>
     <label for="size">Введите размер лабиринта:</label>
-    <input type="number" id="size" name="size" value="10">
+    <input type="number" id="size" name="size">
     <button onclick="getTable()">Создать лабиринт</button>
 
     <div class="matrix"> </div>
     <script src="./logic.js"></script>
 </body>
+
 </html>
