--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
+      integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
+      crossorigin="anonymous"
+      defer></script>
     <title>Ant Algorithm</title>
 </head>
 <body>
     <canvas class="canvas" width="1000" height="1000"></canvas>
-    <script src="./logic2.js"></script>
+    <script type="module" src="./WebGLFunctions.js"></script>
+    <script type="module" src="./logic.js"></script>
 </body>
 </html>
