--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -6,7 +6,8 @@
     <title>main</title>
 </head>
 <body>
-    
+    <button class="button"></button>
+    <canvas class="map"></canvas>
     <script src="./logic.js"></script>
 </body>
 </html>
