--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -19,6 +19,7 @@
       </div>
       <canvas class="canvas" height="900px" width="1700px"></canvas>
     </div>
+    <script type="module" src="./Ant.js"></script>
     <script type="module" src="./WebGLFunctions.js"></script>
     <script type="module" src="./logic.js"></script>
 </body>
