--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -8,16 +8,28 @@
       integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
       crossorigin="anonymous"
       defer></script>
+
     <title>Ant Algorithm</title>
 </head>
 <body>
-    <div class="body">
+    <div class="container">
       <div class="menu">
-        <label for="fieldSizeInput">Размер поля:</label>
-        <input id="fieldSizeInput" type="number" value="10"/>
-        <button id="acceptButton" onclick="acceptSize()">Применить</button>
+        
+        <label for="inputFieldSize">Field size:</label>
+        <input class="inputField" id="inputFieldSize" type="number" value="300"/>
+
+        <label for="inputAntCount">Ant count:</label>
+        <input class="inputField" id="inputAntCount" type="number" value="50"/>
+        <button id="regenButton">Regenerate</button>
+
+        <label for="inputDrySpeed">Dry speed:</label>
+        <input class="inputField" id="inputDrySpeed" type="number" value="1"/>
+
+        <label for="inputAntSpeed">Ant speed:</label>
+        <input class="inputField" id="inputAntSpeed" type="number" value="1"/>
+
       </div>
-      <canvas class="canvas" height="900px" width="1700px"></canvas>
+      <canvas class="canvas" height="50px" width="1700px"></canvas>
     </div>
     <script type="module" src="./Ant.js"></script>
     <script type="module" src="./WebGLFunctions.js"></script>
