All without buntons and animation

--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -15,10 +15,11 @@
     <button onclick="CreateWall()">Добавить/Удалить стену</button>
     <button onclick="CreateBegin()">Добавить/Удалить начало</button>
     <button onclick="CreateEnd()">Добавить/Удалить конец</button>
-    <div class="matrix"> </div>
+    <div class="matrix" id="maze"> </div>
 
     <button onclick="searchWay()">Найти путь</button>
     <script src="./logic.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
 </body>
 
 </html>
