--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -11,7 +11,7 @@
 <body>
     <label for="size">Введите размер лабиринта:</label>
     <input type="number" id="size" name="size">
-    <button onclick="CreateMaze()">Создать лабиринт</button>
+    <button onclick="CreateMaze()">Соvaздать лабиринт</button>
     <button onclick="CreateWall()">Добавить/Удалить стену</button>
     <button onclick="CreateBegin()">Добавить/Удалить начало</button>
     <button onclick="CreateEnd()">Добавить/Удалить конец</button>
