--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -11,6 +11,8 @@
     <input type="number" id="inputPopulationSize" placeholder="10">
     <label for="inputMutationRate">Вероятность мутации(%)</label>
     <input type="number" id="inputMutationRate" placeholder="10">
+    <label for="inputAmountOfGenerations">Количество поколений</label>
+    <input type="number" id="inputAmountOfGenerations" placeholder="500">
     <canvas class="map" id="map"></canvas>
     <script src="./logic.js"></script>
 </body>
