--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -22,11 +22,8 @@
         <input class="inputField" id="inputAntCount" type="number" value="200"/>
         <button id="regenButton">Regenerate</button>
 
-        <label for="inputDrySpeed">Dry speed:</label>
-        <input class="inputField" id="inputDrySpeed" type="number" value="0.3"/>
-
-        <label for="inputAntSpeed">Ant speed:</label>
-        <input class="inputField" id="inputAntSpeed" type="number" value="1"/>
+        <label for="inputSimulationSpeed">Simulation speed:</label>
+        <input class="inputField" id="inputSimulationSpeed" type="number" value="1"/>
         
         <label for="selectBrush">Brush: </label>
         <select id="selectBrush">
