--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -16,14 +16,15 @@
       <div class="menu">
         
         <label for="inputFieldSize">Field size:</label>
-        <input class="inputField" id="inputFieldSize" type="number" value="500"/>
+        <input class="inputField" id="inputFieldSize" type="number" value="1000"/>
 
         <label for="inputAntCount">Ant count:</label>
-        <input class="inputField" id="inputAntCount" type="number" value="200"/>
+        <input class="inputField" id="inputAntCount" type="number" value="300"/>
         <button id="regenButton">Regenerate</button>
+        <button id="startButton">Start/stop</button>
 
         <label for="inputSimulationSpeed">Simulation speed:</label>
-        <input class="inputField" id="inputSimulationSpeed" type="number" value="1"/>
+        <input class="inputField" id="inputSimulationSpeed" type="number" min="1" value="1"/>
         
         <label for="selectBrush">Brush: </label>
         <select id="selectBrush">
