--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -28,10 +28,11 @@
         
         <label for="selectBrush">Brush: </label>
         <select id="selectBrush">
-          <option value="obstacle">obstacle</option>
-          <option value="foodMarker">food marker</option>
           <option value="home">home</option>
           <option value="food">food</option>
+          <option value="obstacle">obstacle</option>
+          <option value="erase">erase</option>
+          <option value="foodMarker">food marker</option>
           <option value="homeMarker">home marker</option>
         </select>
         <label for="inputBrushSize">Brush size:</label>
