--- a/algorithms/Clustering algorithm/index.html
+++ b/algorithms/Clustering algorithm/index.html
@@ -6,7 +6,10 @@
     <title>main</title>
 </head>
 <body>
-    
+    <button class="button" id="buttonStart"></button>
+    <label for="inputClustersAmount">Количество кластеров</label>
+    <input id="inputClustersAmount" type="range" min="1" max="10" step="1">
+    <canvas class="map" id="map"></canvas>
     <script src="./logic.js"></script>
 </body>
 </html>
