--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
     <title>Neural network</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <p>dslfjsl;jdf</p>
+        <div>
+            <div class="field"></div>
+
+        </div>
+    </div>
     <script src="./logic.js"></script>
 </body>
+
 </html>
