Add canvas and neurons

--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -7,7 +7,7 @@
     <title>Neural network</title>
 </head>
 
-<body>
+<body class="body">
     <div class="container">
         <p>dslfjsl;jdf</p>
         <div>
