--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -14,6 +14,7 @@
             <div class="field"></div>
 
         </div>
+        <label class="lableAnswer"></label>
     </div>
     <script src="./logic.js"></script>
 </body>
