--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -9,7 +9,7 @@
 
 <body class="body">
     <div class="container">
-        <p>dslfjsl;jdf</p>
+        <button class="buttonClear">Clear field</button>
         <div>
             <div class="field"></div>
 
