--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
+    <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
     <title>Neural network</title>
 </head>
 
@@ -16,6 +17,7 @@
         </div>
         <label class="lableAnswer"></label>
     </div>
+    <canvas id="outputCanvas" width="100" height="100"></canvas>
     <script src="./logic.js"></script>
 </body>
 
