--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -18,6 +18,7 @@
         <label class="lableAnswer"></label>
     </div>
     <canvas id="outputCanvas" width="100" height="100"></canvas>
+    <button class="nextButton">Next button</button>
     <script src="./logic.js"></script>
 </body>
 
