add start menu with links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Web Algorithms</title>
-  </header>
+  </head>
   <body>
-    <div>
-      <iframe src="./algorithms/A Star/index.html" height="1000" width="1000"></iframe>
-    </div>
+    <button id="a star algo">А*</button>
+    <button id="ant algo">Муравьиный алгоритм</button>
+    <button id="genetic algo">Генетический алгоритм</button>
+    <button id="tree algo">Дерево решений</button>
+    <button id="cluster algo">Кластеризация</button>
+    <button id="neural algo">Нейронная сеть</button>
+    <script src="./logic.js"></script>
   </body>
 </html>
