--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -24,7 +24,7 @@
         <button id="startButton">Start/stop</button>
 
         <label for="inputSimulationSpeed">Simulation speed:</label>
-        <input class="inputField" id="inputSimulationSpeed" type="number" min="1" value="1"/>
+        <input class="inputField" id="inputSimulationSpeed" type="number" min="1" max="5" value="1"/>
         
         <label for="selectBrush">Brush: </label>
         <select id="selectBrush">
