--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body class="body">
-    <div class="container">
+    <div class="menu">
         <button class="buttonClear">Clear field</button>
-        <div>
-            <div class="field"></div>
-
-        </div>
-        <label class="lableAnswer"></label>
+        <label for="inputBrushSize">Brush size:</label>
+        <input class="inputField" id="inputBrushSize" type="range" value="4" min="1" max="10"/>
     </div>
-    <canvas id="outputCanvas" width="100" height="100"></canvas>
-    <button class="nextButton">Next button</button>
+
+    <div class="container">
+        <canvas class = "fieldCanvas" width="500" height="500"></canvas>
+        
+        <label class="lableAnswer">Answer </label>
+        <canvas id="outputCanvas" width="100" height="100"></canvas>
+
+    </div>
     <script src="./logic.js"></script>
 </body>
 
