--- a/algorithms/Clustering algorithm/index.html
+++ b/algorithms/Clustering algorithm/index.html
@@ -7,7 +7,7 @@
     <script src="./density.js"></script>
     <script src="./hierarchical.js"></script>
     <script src="./draw.js"></script>
-    <title>main</title>
+    <title>Кластеризация</title>
 </head>
 <body>
     <button class="button" id="start button">Запуск</button>
