--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
-    <title>main</title>
+    <title>Генетический алгоритм</title>
 </head>
 <body>
     <button class="button" id="buttonStart"></button>
