--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
     <link rel="stylesheet" href="./styles.css">
-    <title>main</title>
+    <title>A*</title>
 </head>
 
 <body>
