--- a/algorithms/Ant algorithm/index.html
+++ b/algorithms/Ant algorithm/index.html
@@ -9,33 +9,33 @@
       crossorigin="anonymous"
       defer></script>
 
-    <title>Ant Algorithm</title>
+    <title>Муравьиный алгоритм</title>
 </head>
 <body>
     <div class="container">
       <div class="menu">
         
-        <label for="inputFieldSize">Field size:</label>
+        <label for="inputFieldSize">Размер поля:</label>
         <input class="inputField" id="inputFieldSize" type="number" value="1000"/>
 
-        <label for="inputAntCount">Ant count:</label>
+        <label for="inputAntCount">Число мурашей:</label>
         <input class="inputField" id="inputAntCount" type="number" value="300"/>
-        <button id="regenButton">Regenerate</button>
-        <button id="startButton">Start/stop</button>
+        <button id="regenButton">Сгенерировать</button>
+        <button id="startButton">Старт/стоп</button>
 
-        <label for="inputSimulationSpeed">Simulation speed:</label>
+        <label for="inputSimulationSpeed">Скорость симуляции:</label>
         <input class="inputField" id="inputSimulationSpeed" type="number" min="1" max="5" value="1"/>
         
-        <label for="selectBrush">Brush: </label>
+        <label for="selectBrush">Кисть: </label>
         <select id="selectBrush">
-          <option value="home">home</option>
-          <option value="food">food</option>
-          <option value="obstacle">obstacle</option>
-          <option value="erase">erase</option>
-          <option value="foodMarker">food marker</option>
-          <option value="homeMarker">home marker</option>
+          <option value="home">дом</option>
+          <option value="food">еда</option>
+          <option value="obstacle">препятсвие</option>
+          <option value="erase">стереть</option>
+          <option value="foodMarker">Маркер еды</option>
+          <option value="homeMarker">Маркер дома</option>
         </select>
-        <label for="inputBrushSize">Brush size:</label>
+        <label for="inputBrushSize">Размер кисти:</label>
         <input class="inputField" id="inputBrushSize" type="number" value="20"/>
       </div>
 
