--- a/algorithms/Neural network/index.html
+++ b/algorithms/Neural network/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
     <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
-    <title>Neural network</title>
+    <title>Нейронная сеть</title>
 </head>
 
 <body class="body">
     <div class="menu">
-        <button class="buttonClear">Clear field</button>
-        <label for="inputBrushSize">Brush size:</label>
+        <button class="buttonClear">Очистить поле</button>
+        <label for="inputBrushSize">Размер кисти:</label>
         <input class="inputField" id="inputBrushSize" type="range" value="4" min="1" max="10"/>
     </div>
 
     <div class="container">
         <canvas class = "fieldCanvas" width="500" height="500"></canvas>
         
-        <label class="lableAnswer">Answer </label>
+        <label class="lableAnswer">Ответ: </label>
         <canvas id="outputCanvas" width="100" height="100"></canvas>
 
     </div>
