--- a/algorithms/Decision Tree/index.html
+++ b/algorithms/Decision Tree/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <label for="csvInput">Paste CSV:</label><br>
+  <label for="csvInput">CSV:</label><br>
   <textarea id="csvInput"></textarea><br>
-  <button id="buildTreeBtn">Build Tree</button><br>
-  <label for="searchInput">Search:</label><br>
+  <button id="buildTreeBtn">Постороить дерево</button><br>
+  <label for="searchInput">Поиск:</label><br>
   <textarea id="csvSearch"></textarea><br>
-  <button id="searchBtn">Search</button><br>
+  <button id="searchBtn">Поиск</button><br>
   <div id="tree"></div>
 
   <script>
