--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Web Algorithms</title>
-  </head>
-  <body>
-    <button id="a star algo">А*</button>
-    <button id="ant algo">Муравьиный алгоритм</button>
-    <button id="genetic algo">Генетический алгоритм</button>
-    <button id="tree algo">Дерево решений</button>
-    <button id="cluster algo">Кластеризация</button>
-    <button id="neural algo">Нейронная сеть</button>
-    <script src="./logic.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./styles.css">
+  <title>Web Algorithms</title>
+</head>
+
+<body>
+  <div class="menu">
+    <button class="button" id="a star algo">А*</button>
+    <button class="button" id="ant algo">Муравьиный алгоритм</button>
+    <button class="button" id="genetic algo">Генетический алгоритм</button>
+    <button class="button" id="tree algo">Дерево решений</button>
+    <button class="button" id="cluster algo">Кластеризация</button>
+    <button class="button" id="neural algo">Нейронная сеть</button>
+  </div>
+
+  <script src="./logic.js"></script>
+</body>
+
 </html>
