--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -8,16 +8,20 @@
 </head>
 
 <body>
-    <label for="size">Введите размер лабиринта:</label>
-    <input type="number" id="size" name="size">
+    <div class="menu">
+        <label for="size">Размер лабиринта:</label>
+        <input type="number" id="size" name="size" value="50">
 
-    <button onclick="CreateMaze()">Соvaздать лабиринт</button>
-    <button onclick="CreateWall()">Добавить/Удалить стену</button>
-    <button onclick="CreateBegin()">Добавить/Удалить начало</button>
-    <button onclick="CreateEnd()">Добавить/Удалить конец</button>
-    <div class="matrix" id="maze"> </div>
+        <button class="button" onclick="CreateMaze()">Создать лабиринт</button>
+        <button class="button" onclick="CreateWall()">Добавить/Удалить стену</button>
+        <button class="button" onclick="CreateBegin()">Перенести начало</button>
+        <button class="button" onclick="CreateEnd()">Перенести конец</button>
+    </div>
 
-    <button onclick="searchWay()">Найти путь</button>
+    <div class="container">
+        <div class="matrix" id="maze"> </div>
+        <button class="findButton" onclick="searchWay()">Найти путь</button>
+    </div>
 
     <script src="./logic.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
