--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
     <title>Генетический алгоритм</title>
 </head>
+
 <body>
-    <button class="button" id="buttonStart"></button>
-    <label for="inputPopulationSize">Размер популяции</label>
-    <input type="number" id="inputPopulationSize" placeholder="10">
-    <label for="inputMutationRate">Вероятность мутации(%)</label>
-    <input type="number" id="inputMutationRate" placeholder="10">
-    <label for="inputAmountOfGenerations">Количество поколений</label>
-    <input type="number" id="inputAmountOfGenerations" placeholder="500">
-    <canvas class="map" id="map"></canvas>
+    <div class="container">
+        <div class="menu">
+            <button class="button" id="buttonStart"></button>
+            <label for="inputPopulationSize">Размер популяции</label>
+            <input type="number" id="inputPopulationSize" placeholder="10">
+            <label for="inputMutationRate">Вероятность мутации(%)</label>
+            <input type="number" id="inputMutationRate" placeholder="10">
+            <label for="inputAmountOfGenerations">Количество поколений</label>
+            <input type="number" id="inputAmountOfGenerations" placeholder="500">
+        </div>
+        <canvas class="map" id="map"></canvas>
+
+    </div>
+
     <script src="./logic.js"></script>
 </body>
+
 </html>
