--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./draw.js"></script>
+    <script src="./algo.js"></script>
+    <script src="./individual.js"></script>
     <title>Генетический алгоритм</title>
 </head>
 <body>
-    <button class="button" id="buttonStart"></button>
-    <label for="inputPopulationSize">Размер популяции</label>
-    <input type="number" id="inputPopulationSize" placeholder="10">
-    <label for="inputMutationRate">Вероятность мутации(%)</label>
-    <input type="number" id="inputMutationRate" placeholder="10">
-    <label for="inputAmountOfGenerations">Количество поколений</label>
-    <input type="number" id="inputAmountOfGenerations" placeholder="500">
+    <button id="start button">Запуск</button>
     <canvas class="map" id="map"></canvas>
     <script src="./logic.js"></script>
 </body>
