add menu to all sites

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="menu">
+  <div>
     <button class="button" id="a star algo">А*</button>
     <button class="button" id="ant algo">Муравьиный алгоритм</button>
     <button class="button" id="genetic algo">Генетический алгоритм</button>
@@ -16,7 +16,6 @@
     <button class="button" id="cluster algo">Кластеризация</button>
     <button class="button" id="neural algo">Нейронная сеть</button>
   </div>
-
   <script src="./logic.js"></script>
 </body>
 
