--- a/algorithms/A Star/index.html
+++ b/algorithms/A Star/index.html
@@ -23,6 +23,15 @@
         <button class="findButton" onclick="searchWay()">Найти путь</button>
     </div>
 
+    <div>
+        <button class="button" id="a star algo">А*</button>
+        <button class="button" id="ant algo">Муравьиный алгоритм</button>
+        <button class="button" id="genetic algo">Генетический алгоритм</button>
+        <button class="button" id="tree algo">Дерево решений</button>
+        <button class="button" id="cluster algo">Кластеризация</button>
+        <button class="button" id="neural algo">Нейронная сеть</button>
+    </div>
+
     <script src="./logic.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
 </body>
