--- a/algorithms/Decision Tree/index.html
+++ b/algorithms/Decision Tree/index.html
@@ -107,6 +107,15 @@
 
 
   </script>
+
+  <div>
+      <button class="button" id="a star algo">А*</button>
+      <button class="button" id="ant algo">Муравьиный алгоритм</button>
+      <button class="button" id="genetic algo">Генетический алгоритм</button>
+      <button class="button" id="tree algo">Дерево решений</button>
+      <button class="button" id="cluster algo">Кластеризация</button>
+      <button class="button" id="neural algo">Нейронная сеть</button>
+  </div>
 </body>
 
 </html>
