--- a/algorithms/Genetic algorithm/index.html
+++ b/algorithms/Genetic algorithm/index.html
@@ -12,5 +12,13 @@
     <button id="start button">Запуск</button>
     <canvas class="map" id="map"></canvas>
     <script src="./logic.js"></script>
+    <div class="menu">
+        <button class="button" id="a star algo">А*</button>
+        <button class="button" id="ant algo">Муравьиный алгоритм</button>
+        <button class="button" id="genetic algo">Генетический алгоритм</button>
+        <button class="button" id="tree algo">Дерево решений</button>
+        <button class="button" id="cluster algo">Кластеризация</button>
+        <button class="button" id="neural algo">Нейронная сеть</button>
+    </div>
 </body>
 </html>
